feat(*): add post functionality

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,30 +1,37 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Example from '../components/elements/exampleElement/example'
 
-/* import { contentfulClient } from '../lib/contentful'; */
-/* import type { BlogPost } from '../lib/contentful'; */
-/**/
-/* const entries = await contentfulClient.getEntries<BlogPost>({ */
-/*   content_type: 'blogPost' */
-/* }) */
-/**/
-/* const  posts = entries.items.map((item) => { */
-/*   const { title, date, description, slug } = item.fields */
-/*   return { */
-/*     title,  */
-/*     slug,  */
-/*     description, */
-/*     date: new Date(date).toLocaleDateString() */
-/*   } */
-/* }) */
+import { contentfulClient } from '../lib/contentful';
+import type { BlogPost } from '../lib/contentful';
+
+const entries = await contentfulClient.getEntries<BlogPost>({
+  content_type: 'blogPost'
+})
+
+const  posts = entries.items.map((item) => {
+  const { title, date, description, slug } = item.fields
+  return {
+    title, 
+    slug, 
+    description,
+    date: new Date(date).toLocaleDateString()
+  }
+})
 ---
 
 <Layout title="Welcome to Astro.">
-	<main class="flex items-center justify-center h-screen w-full">
-    <div>
-      <Example />
-    </div>
+	<main class="flex items-start justify-center h-screen w-full">
+    <ul class="mt-20">
+      {posts.map((post) => (
+        <li class="bg-white px-3 py-4 drop-shadow-lg rounded-lg">
+          <a href={`/posts/${post.slug}/`}>
+            <h2>{post.title}</h2>
+          </a>
+          <time>{post.date}</time>
+          <p>{post.description}</p>
+        </li>
+      ))}
+    </ul>
 	</main>
 </Layout>
 
