--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import Navigation from '../components/modules/m-Navigation'
 export interface Props {
 	title: string;
 }
@@ -16,6 +17,9 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body>
+    <header>
+      <Navigation />
+    </header>
 		<slot />
 	</body>
 </html>
