--- a/src/pages/posts/[slug].astro
+++ b/src/pages/posts/[slug].astro
@@ -39,6 +39,7 @@ underPost = underData.items.map((item) => {
 <html lang="en">
   <head>
     <title>{post[0].title}</title>
+    <meta charset="UTF-8" />
   </head>
   <body class="flex flex-col items-center justify-center pt-10">
     <div class="w-7/12">
