--- a/src/pages/posts/festplatten/[slug].astro
+++ b/src/pages/posts/festplatten/[slug].astro
@@ -1,7 +1,7 @@
 ---
-import { contentfulClient, UnderContentBlock } from "../../lib/contentful";
+import { contentfulClient, UnderContentBlock } from "../../../lib/contentful";
 import { documentToHtmlString } from "@contentful/rich-text-html-renderer";
-import type { BlogPost } from "../../lib/contentful";
+import type { BlogPost } from "../../../lib/contentful";
 
 let post;
 let underPost;
