--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,6 +17,7 @@ const  posts = entries.items.map((item) => {
     date: new Date(date).toLocaleDateString()
   }
 })
+
 ---
 
 <Layout title="Welcome to Astro.">
@@ -24,7 +25,7 @@ const  posts = entries.items.map((item) => {
     <ul class="mt-20">
       {posts.map((post) => (
         <li class="bg-white px-3 py-4 drop-shadow-lg rounded-lg mb-10">
-          <a href={`/posts/${post.slug}/`}>
+          <a href={`/posts/${post.slug}/${post.slug}/`}>
             <h2>{post.title}</h2>
           </a>
           <time>{post.date}</time>
