--- a/src/pages/posts/festplatten/[slug].astro
+++ b/src/pages/posts/festplatten/[slug].astro
@@ -40,6 +40,7 @@ underPost = underData.items.map((item) => {
   <head>
     <title>{post[0].title}</title>
     <meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width" />
   </head>
   <body class="flex flex-col items-center justify-center pt-10">
     <div class="w-7/12">
