--- a/src/pages/posts/festplatten/[slug].astro
+++ b/src/pages/posts/festplatten/[slug].astro
@@ -42,7 +42,7 @@ underPost = underData.items.map((item) => {
     <meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
   </head>
-  <body class="flex flex-col items-center justify-center pt-10">
+  <body class="px-4 flex flex-col items-start md:items-center justify-center pt-10 w-screen">
     <div class="w-full md:w-7/12">
 
       <h1 class="text-xl uppercase font-bold">{post[0].title}</h1>
