--- a/src/pages/posts/typografie/[slug].astro
+++ b/src/pages/posts/typografie/[slug].astro
@@ -43,7 +43,7 @@ underPost = underData.items.map((item) => {
 		<meta name="viewport" content="width=device-width" />
   </head>
   <body class="px-4 flex flex-col items-start md:items-center justify-center pt-10 w-screen">
-    <div class="w-7/12">
+    <div class="w-full md:w-7/12">
       <h1 class="text-xl uppercase font-bold">{post[0].title}</h1>
       <time>{post[0].date}</time>
 
